others/docker-registry/docker-registry.yaml
#  kubectl label nodes k8s-node1 app=docker-registry
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-web
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-web
  template:
    metadata:
      labels:
        app: registry-web
    spec:
      containers:
      - name: registry-web
        image: hyper/docker-registry-web:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          initialDelaySeconds: 60
          httpGet:
            port: 8080
        volumeMounts:
        - name: config
          mountPath: /conf/config.yml
          subPath: config.yml
      volumes:
      - name: config
        configMap:
          name: config-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-srv
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-srv
  template:
    metadata:
      labels:
        app: registry-srv
    spec:
      containers:
      - name: registry-srv
        image: registry:2.7.1
        ports:
        - containerPort: 5000
        #resources:
        #  limits:
        #    memory: 100Mi
        #    cpu: 100m
        livenessProbe:
          initialDelaySeconds: 60
          httpGet:
            port: 5000
        volumeMounts:
        - name: config
          mountPath: /etc/docker/registry/config.yml
          subPath: config.yml
        - name: registry
          mountPath: /var/lib/registry
      volumes:
      - name: config
        configMap:
          name: config-srv
      - name: registry
        hostPath:
          path: /data/registry
          type: DirectoryOrCreate
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app
                operator: In
                values:
                - docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: registry-web
  namespace: docker-registry
spec:
  selector:
    app: registry-web
  ports: 
  - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: registry-srv
  namespace: docker-registry
spec:
  selector:
    app: registry-srv
  ports: 
  - port: 5000
---
